Video change for few pages

--- a/Flight.html
+++ b/Flight.html
@@ -17,7 +17,7 @@
        
         <div class = "video-container">
             <video autoplay loop muted plays-inline class = "back-video">
-                <source src="Images/flight.mp4" type="video/mp4">
+                <source src="Images/flight2.mp4" type="video/mp4">
             </video></div>
 		<nav>
             <p class="hedt"><i class="fa-solid fa-globe fa-beat-fade" style="color: #f4f11f;"></i>  Travel Core</p>
