--- a/Hotels.html
+++ b/Hotels.html
@@ -55,8 +55,8 @@
 		<input type="text", placeholder="  Where are you going?" id = "arrival" class="arrival" oninput="checkCity()"action ="Hotels.html">
 		<i class="fa fa-user">   </i>
 		<input type="text", placeholder="    Number of Adults" id = "Adults" class="departure" >
-		<input type="date" id="start-date" name="start-date" class = "start-date" placeholder = "Arrival Date">
-		<input type="date" id="end-date" name="end-date" class = "end-date" placeholder ="Departure Date">
+		<input id="start-date" name="start-date" class = "start-date" placeholder = "YYYY-MM-DD">
+		<input id="end-date" name="end-date" class = "end-date" placeholder ="YYYY-MM-DD">
         <button id="search-button" type="button">Search </button>
     </form>
         </div></div>
