--- a/Map.html
+++ b/Map.html
@@ -16,7 +16,7 @@
 	<div class="hero">
         <div class = "video-container">
             <video autoplay loop muted plays-inline class = "back-video">
-                <source src="Images/map.mp4" type="video/mp4">
+                <source src="Images/Attraction.mp4" type="video/mp4">
             </video></div>
         <nav>
             <ul class="mainMenu">
