Few Editing on Hotels.css

--- a/Car_Rental.html
+++ b/Car_Rental.html
@@ -53,8 +53,8 @@
                 <form>
                 <i class="fa-solid fa-search"></i>
                 <input type="text", placeholder="  Pick-up location" id = "Pick-up" class="pick-up"  oninput="checkCity()" action="Car_Rental.html">
-                <input id="start-date" name="pick-up" class = "pick-up-date" placeholder = "Pick YYYY-MM-DD">
-                <input  id="end-date" name="drop-off-date" class = "drop-off-date" placeholder ="Drop YYYY-MM-DD">
+                <input id="start-date" name="pick-up" class = "pick-up-date" placeholder = "Pick YYYY-MM-DD" required>
+                <input  id="end-date" name="drop-off-date" class = "drop-off-date" placeholder ="Drop YYYY-MM-DD" required>
                 <button id="search-button" type="button">Search </button>
             </form>
                 </div></div>
