--- a/Flight.html
+++ b/Flight.html
@@ -58,8 +58,8 @@
 		<input type="text", placeholder="  Where from?" id = "arrival" class="arrival" oninput="checkCity()"action ="Hotels.html">
 		<i class="fa-solid fa-plane-arrival"></i>
 		<input type="text", placeholder="      Where to?" id = "departure" class="departure" oninput="checkCity2()"action ="Hotels.html">
-		<input id="start-date" name="start-date" class = "start-date" placeholder = "YYYY-MM-DD">
-		<input id="end-date" name="end-date" class = "end-date" placeholder ="YYYY-MM-DD">
+		<input id="start-date" name="start-date" class = "start-date" placeholder = "YYYY-MM-DD" required>
+		<input id="end-date" name="end-date" class = "end-date" placeholder ="YYYY-MM-DD" required>
         <button id="search-button" type="button">Search </button>
     </form>
 </div>
