--- a/Hotels.html
+++ b/Hotels.html
@@ -54,9 +54,9 @@
 		<i class="fa-solid fa-plane-departure"></i>
 		<input type="text", placeholder="  Where are you going?" id = "arrival" class="arrival" oninput="checkCity()"action ="Hotels.html">
 		<i class="fa fa-user">   </i>
-		<input type="text", placeholder="    Number of Adults" id = "Adults" class="departure" >
-		<input id="start-date" name="start-date" class = "start-date" placeholder = "YYYY-MM-DD">
-		<input id="end-date" name="end-date" class = "end-date" placeholder ="YYYY-MM-DD">
+		<input type="text", placeholder="    Number of Adults" id = "Adults" class="departure" required >
+		<input id="start-date" name="start-date" class = "start-date" placeholder = "YYYY-MM-DD" required>
+		<input id="end-date" name="end-date" class = "end-date" placeholder ="YYYY-MM-DD" required>
         <button id="search-button" type="button">Search </button>
     </form>
         </div></div>
